fixingspacing

--- a/css/master.css
+++ b/css/master.css
@@ -131,7 +131,8 @@ p.text{
 }
 
 .aliados{
-    max-width: 1200px;
+    /* max-width: 1200px; */
+    max-width: 1000px;
     margin: 0 auto;
     margin-top: 50px;
     text-align: center;
@@ -139,7 +140,8 @@ p.text{
 
 .aliados img{
     vertical-align: middle;
-    margin: 15px 30px;
+    /* margin: 15px 30px; */
+    margin: 20px 30px;
 }
 
 @media only screen and (max-width: 1000px) {
